# LexiSearch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  test_keys.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: run_benchmarks.py
benchmarks/results/: v0.1.0.md
docs/: index.md
src/lexisearch/: __main__.py  app.py
